attempt to fix overflow in banner

--- a/public/styles.css
+++ b/public/styles.css
@@ -24,13 +24,12 @@ body {
 
 .logo {
   max-width: 160px;
-  padding-bottom: 20px;
 }
 
 /* Corrigir o conteúdo centralizado */
 .banner-container {
   text-align: center;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
   border-radius: 8px;
   max-width: 90%; /* Ajusta largura máxima */
   margin: 0 auto; /* Centraliza horizontalmente */
